* Make Kotlin a first-class citizen. * Remove Java 21 preview-feature dependency. Relates to #31